# LLM-linter

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: core.rs  main.rs  patches.rs
src/llm_clients/: openai.rs
src/patches/: file.rs  github.rs
src/reporter/: github.rs  stdout.rs
src/rules/: markdown.rs
