[package]
name = "llm-linter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
futures = "0.3.30"
getopts = "0.2.21"
globset = "0.4.14"
indoc = "2.0.5"
log = "0.4.22"
octocrab = "0.39.0"
openai = "1.0.0-alpha.15"
parsepatch = "0.3.1"
patch = "0.7.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
secrecy = "0.8.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
tokio = "1.39.2"
